# cubeL4-rs

./: Cargo.toml  README.md  build.rs  run_bindgen.sh  wrapper.h
.cargo/: config.toml
Drivers/CMSIS/Core/Include/: cmsis_gcc.h
examples/: basic.rs
src/: bindings.rs  extra.c  extra.h  lib.rs
